Migrate from jdk 10 -> 1.8, fix file-service test