@@ -10,6 +10,8 @@ import ru.mediaserver.service.fileservice.model.FileType;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.Assert.*;
@@ -25,81 +27,81 @@ public abstract class AbstractFileRepositoryTest {
 
     @Test
     public void getFromRoot() {
-        List<FileProperty> list = repository.get(userName, ROOT.getPath());
-        assertEquals(List.of(FILE1, FILE2, FOLDER1), list);
+        List<FileProperty> list = repository.get(ROOT.getPath());
+        assertEquals(Arrays.asList(FILE1, FILE2, FOLDER1), list);
     }
 
     @Test
     public void getFolderFalse() {
-        assertNull(repository.get(userName, "wrong_path"));
+        assertNull(repository.get("wrong_path"));
     }
 
     @Test
     public void getFile() {
-        List<FileProperty> list = repository.get(userName, FILE1.getPath());
-        assertEquals(List.of(FILE1), list);
+        List<FileProperty> list = repository.get(FILE1.getPath());
+        assertEquals(Collections.singletonList(FILE1), list);
     }
 
     @Test
     public void getFolder() {
-        List<FileProperty> list = repository.get(userName, FOLDER1.getPath());
-        assertEquals(List.of(FILE3, FILE4), list);
+        List<FileProperty> list = repository.get(FOLDER1.getPath());
+        assertEquals(Arrays.asList(FILE3, FILE4), list);
     }
 
     @Test
     public void removeFile() {
-        var path = ROOT.getPath().concat("/test");
+        String path = ROOT.getPath().concat("/test");
 
-        assertTrue(repository.copy(userName, FILE1.getPath(), path));
+        assertTrue(repository.copy(FILE1.getPath(), path));
 
-        boolean delete = repository.delete(userName, path);
+        boolean delete = repository.delete(path);
         assertTrue(delete);
 
-        List<FileProperty> list = repository.get(userName, path);
+        List<FileProperty> list = repository.get(path);
         assertNull(list);
     }
 
     @Test
     public void removeFolder() {
-        var path = ROOT.getPath().concat("/test");
+        String path = ROOT.getPath().concat("/test");
 
-        assertTrue(repository.createDirectory(userName, path));
+        assertTrue(repository.createDirectory(path));
 
-        boolean delete = repository.delete(userName, path);
+        boolean delete = repository.delete(path);
         assertTrue(delete);
 
-        List<FileProperty> list = repository.get(userName, path);
+        List<FileProperty> list = repository.get(path);
         assertNull(list);
     }
 
     @Test
     public void removeFileFalse() {
-        boolean delete = repository.delete(userName, "wrong_path");
+        boolean delete = repository.delete("wrong_path");
         assertFalse(delete);
     }
 
     @Test
     public void uploadFile() throws IOException {
-        String path = userName.concat("/file3");
+        String path = ROOT.getPath().concat("/file3");
         try (ByteArrayInputStream inputStream = new ByteArrayInputStream("Hello, World!".getBytes())) {
-            String upload = repository.upload(userName, path, inputStream);
+            String upload = repository.upload(path, inputStream);
             assertEquals(path, upload);
 
-            List<FileProperty> actual = repository.get(userName, path);
-            List<FileProperty> expected = List.of(
+            List<FileProperty> actual = repository.get(path);
+            List<FileProperty> expected = Collections.singletonList(
                     new FileProperty("file3", path, FileType.NONE, 13)
             );
 
             assertEquals(expected, actual);
         }
-        assertTrue(repository.delete(userName, path));
+        assertTrue(repository.delete(path));
     }
 
     @Test
     public void downloadFile() throws IOException {
         String path = FILE1.getPath();
         try(ByteArrayOutputStream outputStream = new ByteArrayOutputStream()){
-            var download = repository.download(userName, path, outputStream);
+            List<FileProperty> download = repository.download(path, outputStream);
             assertNotNull(download);
 
             assertEquals(path, download.get(0).getPath());
@@ -111,7 +113,7 @@ public abstract class AbstractFileRepositoryTest {
     public void downloadFileFalse() throws IOException {
         String path = userName.concat("FILE");
         try(ByteArrayOutputStream outputStream = new ByteArrayOutputStream()){
-            assertNull(path, repository.download(userName, path, outputStream));
+            assertNull(path, repository.download(path, outputStream));
         }
     }
 
@@ -119,31 +121,31 @@ public abstract class AbstractFileRepositoryTest {
     public void copyFile() {
         String path = FILE1.getPath();
 
-        var pathTo = FOLDER1.getPath().concat("/").concat(FILE1.getName());
-        assertTrue(repository.copy(userName, path, pathTo));
+        String pathTo = FOLDER1.getPath().concat("/").concat(FILE1.getName());
+        assertTrue(repository.copy(path, pathTo));
 
-        List<FileProperty> actual = repository.get(userName, FOLDER1.getPath());
+        List<FileProperty> actual = repository.get(FOLDER1.getPath());
 
-        List<FileProperty> expected = List.of(
+        List<FileProperty> expected = Arrays.asList(
                 new FileProperty(FILE1.getName(), pathTo, FILE1.getType(), FILE1.getLength()),
                 FILE3, FILE4);
 
         assertEquals(expected, actual);
 
-        assertTrue(repository.delete(userName, pathTo));
+        assertTrue(repository.delete(pathTo));
     }
 
     @Test
     public void copyDirectory() {
         String path = FOLDER1.getPath();
 
-        var pathTo = path.replace("1", "2");
+        String pathTo = path.replace("1", "2");
 
-        assertTrue(repository.copy(userName, path, pathTo));
+        assertTrue(repository.copy(path, pathTo));
 
-        List<FileProperty> actual = repository.get(userName, pathTo);
+        List<FileProperty> actual = repository.get(pathTo);
 
-        List<FileProperty> expected = List.of(
+        List<FileProperty> expected = Arrays.asList(
                 new FileProperty(FILE3.getName(),
                         FILE3.getPath().replace("1", "2"), FILE3.getType(), FILE3.getLength()),
                 new FileProperty(FILE4.getName(),
@@ -151,7 +153,7 @@ public abstract class AbstractFileRepositoryTest {
 
         assertEquals(expected, actual);
 
-        assertTrue(repository.delete(userName, pathTo));
+        assertTrue(repository.delete(pathTo));
     }
 
     @Test
@@ -159,46 +161,46 @@ public abstract class AbstractFileRepositoryTest {
         String path = ROOT.getPath().concat("/file10");
         String pathTo = ROOT.getPath().concat("/file10.txt");
 
-        assertFalse(repository.copy(userName, path, pathTo));
+        assertFalse(repository.copy(path, pathTo));
     }
 
     @Test
     public void moveFile() {
         String path = ROOT.getPath().concat("/testfile");
-        assertTrue(repository.copy(userName, FILE1.getPath(), path));
+        assertTrue(repository.copy(FILE1.getPath(), path));
 
         String pathTo = FOLDER1.getPath().concat("/testfile");
-        assertTrue(repository.move(userName, path, pathTo));
+        assertTrue(repository.move(path, pathTo));
 
         {
-            List<FileProperty> actual = repository.get(userName, FOLDER1.getPath());
+            List<FileProperty> actual = repository.get(FOLDER1.getPath());
 
-            List<FileProperty> expected = List.of(FILE3, FILE4,
+            List<FileProperty> expected = Arrays.asList(FILE3, FILE4,
                     new FileProperty("testfile", pathTo, FILE1.getType(), FILE1.getLength()));
 
             assertEquals(expected, actual);
         }
 
         {
-            List<FileProperty> actual = repository.get(userName, userName);
-            assertEquals(List.of(FILE1, FILE2, FOLDER1), actual);
+            List<FileProperty> actual = repository.get(ROOT.getPath());
+            assertEquals(Arrays.asList(FILE1, FILE2, FOLDER1), actual);
         }
 
-        assertTrue(repository.delete(userName, pathTo));
+        assertTrue(repository.delete(pathTo));
     }
 
     @Test
     public void moveDirectory() {
         String path = FOLDER1.getPath().replace("1", "2");
-        assertTrue(repository.copy(userName, FOLDER1.getPath(), path));
+        assertTrue(repository.copy(FOLDER1.getPath(), path));
 
         String pathTo = FOLDER1.getPath().concat("/").concat(FOLDER1.getName().replace("1", "2"));
-        assertTrue(repository.move(userName, path, pathTo));
+        assertTrue(repository.move(path, pathTo));
 
         {
-            List<FileProperty> actual = repository.get(userName, pathTo);
+            List<FileProperty> actual = repository.get(pathTo);
 
-            List<FileProperty> expected = List.of(
+            List<FileProperty> expected = Arrays.asList(
                     new FileProperty(FILE3.getName(),
                             pathTo.concat("/").concat(FILE3.getName()), FILE3.getType(), FILE3.getLength()),
                     new FileProperty(FILE4.getName(),
@@ -208,11 +210,11 @@ public abstract class AbstractFileRepositoryTest {
         }
 
         {
-            List<FileProperty> actual = repository.get(userName, userName);
-            assertEquals(List.of(FILE1, FILE2, FOLDER1), actual);
+            List<FileProperty> actual = repository.get(ROOT.getPath());
+            assertEquals(Arrays.asList(FILE1, FILE2, FOLDER1), actual);
         }
 
-        assertTrue(repository.delete(userName, pathTo));
+        assertTrue(repository.delete(pathTo));
     }
 
     @Test
@@ -220,26 +222,26 @@ public abstract class AbstractFileRepositoryTest {
         String path = ROOT.getPath().concat("/file10");
         String pathTo = ROOT.getPath().concat("/file10.txt");
 
-        assertFalse(repository.move(userName, path, pathTo));
+        assertFalse(repository.move(path, pathTo));
     }
 
     @Test
     public void createDirectory() {
         String path = ROOT.getPath().concat("/folder2");
-        assertTrue(repository.createDirectory(userName, path));
+        assertTrue(repository.createDirectory(path));
 
-        List<FileProperty> actual = repository.get(userName, userName);
+        List<FileProperty> actual = repository.get(ROOT.getPath());
 
-        var expected = List.of(FILE1, FILE2, FOLDER1,
+        List<FileProperty> expected = Arrays.asList(FILE1, FILE2, FOLDER1,
                 new FileProperty("folder2", path, FileType.DIRECTORY, 0));
         assertEquals(expected, actual);
 
-        assertTrue(repository.delete(userName, path));
+        assertTrue(repository.delete(path));
     }
 
     @Test
     public void createDuplicateDirectoryFalse() {
         String path = ROOT.getPath();
-        assertFalse(repository.createDirectory(userName, path));
+        assertFalse(repository.createDirectory(path));
     }
 }
